--- a/package.json
+++ b/package.json
@@ -6,9 +6,22 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.2.3",
+    "clsx": "^1.2.1",
+    "normalize": "^0.3.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.6",
+    "sass": "^1.58.3",
+    "scss": "^0.2.4",
+    "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
